# django-rest-opaque

./: .gitignore  LICENSE  MANIFEST.in  README.md  __init__.py  apps.py  pyproject.toml
django_rest_opaque/: __init__.py  admin.py  models.py  urls.py  views.py
django_rest_opaque.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
django_rest_opaque/migrations/: 0001_initial.py  0002_initial.py
management/commands/: generate_opaque_setup.py
